<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Google Inc. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License');
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS-IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/ActionBarCompat" />

    <ScrollView style="@style/ScrollView" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding" >

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/mail_label" />

            <Button
                style="@style/Button"
                android:layout_marginBottom="@dimen/padding"
                android:onClick="mailClicked"
                android:text="@string/mail_action" />

            <TextView
                style="@style/TextView"
                android:text="@string/rate_label" />

            <Button
                style="@style/Button"
                android:layout_marginTop="10dp"
                android:onClick="rate"
                android:text="@string/rate_action" />

            <TextView
                style="@style/TextView"
                android:layout_marginTop="10dp"
                android:text="@string/web_label" />

            <Button
                style="@style/Button"
                android:layout_marginBottom="@dimen/padding"
                android:onClick="webClicked"
                android:text="@string/web_action" />

            <TextView
                style="@style/TextView"
                android:text="@string/created_by" />

            <TextView
                style="@style/TextView"
                android:layout_marginBottom="@dimen/padding"
                android:text="@string/learning_labs"
                android:textStyle="bold" />

            <TextView
                style="@style/TextView"
                android:text="@string/opensource_under" />

            <TextView
                style="@style/TextView"
                android:layout_marginBottom="@dimen/padding"
                android:text="@string/apache_20"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>