<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Google Inc. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License');
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS-IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout style="@style/ActionBarCompat" />
  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical"
    android:padding="@dimen/padding" android:id="@+id/question"
    android:visibility="gone">
    <TextView style="@style/TextView" android:id="@+id/question_text"
      android:textSize="16sp" />
    <LinearLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content" android:orientation="vertical">
      <ListView android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/answers"
        android:layout_weight="1" android:fadeScrollbars="false" />
      <TextView  style="@style/TextView" android:id="@+id/choose_all_correct"
        android:text="@string/choose_all_correct" android:textColor="@color/lightgray"
        android:visibility="gone" android:layout_gravity="center" />
      <Button style="@style/Button" android:text="@string/submit"
        android:layout_gravity="center" android:onClick="submitClicked"
        android:id="@+id/submit" />
      <TextView style="@style/TextView" android:textColor="@color/lightgray"
        android:text="@string/this_question_is_anonymous" android:visibility="gone"
        android:id="@+id/anonymous" android:layout_gravity="center" />
    </LinearLayout>
  </LinearLayout>
  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical"
    android:padding="@dimen/padding" android:id="@+id/waiting" android:gravity="center">
    <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent" android:layout_height="wrap_content"
      android:gravity="center" android:layout_marginBottom="70dp">
      <ProgressBar android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:indeterminate="true"
        android:visibility="gone" android:id="@+id/polling_progress" />
      <TextView android:textAppearance="?android:attr/textAppearanceMedium"
        style="@style/TextView" android:layout_marginLeft="10dp" android:id="@+id/polling_status" />
    </LinearLayout>
    <Button style="@style/Button" android:text="@string/exit"
      android:onClick="exitClicked" />
  </LinearLayout>
</LinearLayout>