<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Google Inc. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License');
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS-IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout style="@style/ActionBarCompat" />
  <RelativeLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:background="@color/lightgray"
    android:padding="5dp" android:id="@+id/bottom_bar">
    <LinearLayout android:layout_width="wrap_content"
      android:layout_height="wrap_content" android:orientation="vertical"
      android:gravity="center" android:layout_marginLeft="50dp">
      <TextView style="@style/TextView" android:text="@string/timer"
        android:textColor="@android:color/white" />
      <TextView style="@style/TextView" android:textStyle="bold"
        android:textColor="@android:color/white" android:textSize="20sp"
        android:id="@+id/timer" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
      android:layout_height="wrap_content" android:orientation="vertical"
      android:gravity="center" android:layout_alignParentRight="true"
      android:layout_marginRight="50dp">
      <TextView style="@style/TextView" android:text="@string/score"
        android:textColor="@android:color/white" />
      <TextView style="@style/TextView" android:text="0"
        android:textStyle="bold" android:textColor="@android:color/white"
        android:textSize="20sp" android:id="@+id/score" />
    </LinearLayout>
  </RelativeLayout>
  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical"
    android:padding="@dimen/padding">
    <TextView style="@style/TextView" android:id="@+id/question_text"
      android:textSize="16sp" />
    <LinearLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content" android:orientation="vertical">
      <ListView android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/answers"
        android:layout_weight="1" android:fadeScrollbars="false" />
      <TextView  style="@style/TextView" android:id="@+id/choose_all_correct"
        android:text="@string/choose_all_correct" android:textColor="@color/lightgray"
        android:visibility="gone" android:layout_gravity="center" />
      <Button style="@style/Button" android:text="@string/submit"
        android:layout_gravity="center" android:onClick="submitClicked"
        android:id="@+id/submit" />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>