<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Google Inc. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License');
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS-IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout style="@style/ActionBarCompat" />
  <ScrollView style="@style/ScrollView" android:layout_weight="1">
    <LinearLayout android:layout_width="fill_parent"
      android:layout_height="fill_parent" android:orientation="vertical"
      android:padding="@dimen/padding" android:visibility="invisible"
      android:id="@+id/quiz_info">
      <TextView style="@style/TextView" android:id="@+id/quiz_description"
        android:textSize="16sp" />
      <ImageView android:scaleType="centerInside"
        android:layout_width="170dp" android:layout_height="170dp" android:id="@+id/quiz_image"
        android:layout_gravity="center" />
      <TextView style="@style/TextView" android:text="@string/game_rules"
        android:layout_width="fill_parent" />
      <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:gravity="center" android:layout_marginTop="10dp">
        <Button style="@style/ImportantButton" android:text="@string/start"
          android:layout_gravity="center" android:onClick="startClicked" />
        <Button style="@style/Button" android:text="@string/show_leaderboard"
          android:layout_gravity="center" android:onClick="leaderboardClicked" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>